Trim opening paragraphs; try Spartan theme.

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,389 +1,163 @@
-@charset "UTF-8";
-
-/*
-	Copyright © 2014-2016 Daniel Aleksandersen and others.
-
-	Permission is hereby granted, free of charge, to any
-	person obtaining a copy of this software and associated
-	documentation files (the "Software"), to deal in the
-	Software without restriction, including without limitation
-	the rights to use, copy, modify, merge, publish,
-	distribute, sublicense, and/or sell copies of the
-	Software, and to permit persons to whom the Software is
-	furnished to do so, subject to the following conditions:
-
-	The above copyright notice and this permission notice
-	shall be included in all copies or substantial portions of
-	the Software.
-
-	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY
-	KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
-	WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
-	PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS
-	OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
-	OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
-	OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
-	SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-*/
+* {
+    -webkit-font-smoothing: antialiased;
+    box-sizing: border-box;
+}
 
 body {
-	color: #4F5151;
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 17px;
-	line-height: 1.4;
-	padding: 1em;
+    font-size: 16px;
+    font-family: Merriweather, Georgia, serif;
+    line-height: 1.6;
 }
 
-#container {
-	margin: 1em auto;
-	max-width: 770px;
-}
-#menu ul,
-#menu ul li,
-.postpromonav .tags,
-.postpromonav .tags li,
-.pager,
-.pager li,
-#toptranslations ul,
-#toptranslations ul li {
-	list-style: none;
-	padding-left: 0;
-	padding-right: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: Raleway, Arial, sans-serif;
 }
 
-#toptranslations ul {
-	display: inline;
+h2 {
+    border-bottom: 1px solid #eee;
+    margin-bottom: 16px;
+    padding-bottom: 0.3em;
 }
 
-#menu ul li,
-#toptranslations ul li {
-	display: inline-block;
-	margin-right: 1.5em;
+p,
+ul,
+pre {
+    margin-bottom: 20px;
 }
 
-#toptranslations h2 {
-	display: inline;
-	font-size: 1em;
-	margin-right: 1.5em;
+pre,
+code,
+.code,
+tt {
+    font-size: 14px;
+    font-family: 'Source Code Pro', monospace;
 }
 
-#menu ul li:dir(rtl),
-#toptranslations ul li:dir(rtl),
-#toptranslations h2:dir(rtl) {
-	margin-left: 1.5em;
-	margin-right: 0;
+code,
+tt {
+    margin: 0 2px;
+    padding: 2px 4px;
+    background-color: rgba(0,0,0,0.04);
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
 }
 
-#toptranslations {
-	text-align: right;
-	float: right;
+a {
+    color: #28742d;
 }
 
-#toptranslations:dir(rtl) {
-	text-align: left;
-	float: left;
+a:hover,
+a:focus {
+    color: #023906;
 }
 
-.posttranslations h3 {
-	display: inline;
-	font-size: 1em;
+
+p.more a {
+    display: inline-block;
+    padding: 5px 14px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 15px;
 }
 
-.entry-title {
-	font-size: 2em;
+.navbar-default {
+    background-color: #772953;
+    border-color: #511c39;
 }
 
-.posttranslations h3:last-child {
-	display: none;
+.navbar-default .navbar-brand {
+    color: #fff;
+}
+
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #fff;
+  background-color: none;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: #fff;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #fff;
+    background-color: #511c39;
+}
+
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+    color: #fff;
+    background-color: #3e152b;
+}
+
+.navbar-nav > li > a i div {
+    font-size: 50%;
+    text-align: center;
+    margin: 0 auto;
+    position: fixed;
+    left: -50%;
+    right: -50%;
+    font-family: Merriweather, Georgia, serif;
+}
+
+.metadata {
+    color: #c0c0c0;
+    font-family: Raleway, Arial, sans-serif;
+    font-style: italic;
 }
 
 .postindex article {
-	border-bottom: 1px solid #4F5151;
-	padding-bottom: 1em;
-}
-#header {
-	border-bottom: 1px solid #4F5151;
-}
-#footer {
-	border-top: 1px solid #4F5151;
+    margin: 0;
+    position: relative;
 }
 
-/* Tags */
-.postpromonav {
-	border-bottom: 1px solid #4F5151;
-	border-top: 1px solid #4F5151;
-	margin-top: 1em;
-	padding: .5em 0;
-}
-.postpromonav .tags {
-	text-align: center;
-}
-.metadata p:before,
-.postpromonav .tags li:before,
-.postlist .listdate:after {
-	content: " — ";
-}
-.postlist li {
-	margin-bottom: .33em;
+.postindex article header {
+    margin-bottom: 15px;
 }
 
-/* Post and archive pagers */
-.postindexpager .pager .next:before {
-	content: "↓ ";
-}
-.postindexpager .pager .previous:before {
-	content: "↑ ";
-}
-.postpromonav .pager .next:after {
-	content: " →";
-}
-.postpromonav .pager .previous:dir(rtl):after {
-	content: " →";
-}
-.postpromonav .pager .previous:before {
-	content: "← ";
-}
-.postpromonav .pager .next:dir(rtl):before {
-	content: "← ";
+.postindex hr {
+    margin: 60px 0;
 }
 
-.metadata p:first-of-type:before,
-.postpromonav .tags li:first-of-type:before {
-	content: "";
-}
-.postpromonav .pager {
-	clear: both;
-	height: 1em;
-}
-.postpromonav .tags li,
-.postpromonav .pager li {
-	display: inline-block;
-}
-.postpromonav .pager .next {
-	float: right;
-}
-.postpromonav .pager .next:dir(rtl) {
-	float: left;
+.section {
+    margin: 40px 0;
 }
 
-.postpromonav .pager .previous {
-	float: left;
-}
-.postpromonav .pager .previous:dir(rtl) {
-	float: right;
-}
-
-.metadata p {
-	display: inline;
+.tags > li,
+.reference.badge {
+    /* Compensate for font size/family. Normally padding-top is 3px. */
+    padding-top: 5px;
 }
 
-#brand {
-	font-size: 3em;
-	line-height: 1;
+footer {
+    text-align: center;
+    margin: 20px auto;
+    position: relative;
+    left: auto;
+    bottom: auto;
+    width: auto;
+    line-height: 16px;
 }
 
-/* Links */
-:link {
-	color: #1168CC;
-	text-decoration: none;
-}
-:visited {
-	color: #6830BB;
-}
-:link:hover, :visited:hover {
-	color: #0d53a3;
+@media (min-width: 750px) {
+    .container {
+        width: 750px;
+    }
 }
 
-#brand :link,
-#brand :visited {
-	color: inherit;
-}
-
-/* Images */
-img {
-	border: none;
-	line-height: 1;
-}
-
-.postpage img,
-.postpage object,
-.postindex article img,
-.postindex article object {
-	height: auto;
-	max-width: 100%;
-}
-
-/* Comment helpers */
-#disqus_thread {
-	min-height: 325px;
-}
-
-.breadcrumb {
-	padding: 8px 15px;
-	margin-bottom: 20px;
-	list-style: none;
-}
-
-.breadcrumb > li {
-	display: inline-block;
-	margin-right: 0;
-	margin-left: 0;
-}
-
-.breadcrumb > li:after {
-	content: ' / ';
-	color: #888;
-}
-
-.breadcrumb > li:last-of-type:after {
-	content: '';
-	margin-left: 0;
-}
-
-.thumbnails {
-	list-style: none;
-	padding: 0;
-}
-
-.thumbnails > li {
-	display: inline-block;
-	margin-right: 10px;
-}
-
-.thumbnails > li:last-of-type {
-	margin-right: 0;
-}
-
-.codetable .linenos {
-	padding-right: 10px;
-}
-
-.sr-only {
-	position: absolute;
-	width: 1px;
-	height: 1px;
-	padding: 0;
-	margin: -1px;
-	overflow: hidden;
-	clip: rect(0, 0, 0, 0);
-	border: 0;
-}
-
-.sr-only-focusable:active,
-.sr-only-focusable:focus {
-	position: static;
-	width: auto;
-	height: auto;
-	margin: 0;
-	overflow: visible;
-	clip: auto;
-}
-
-pre.code, code {
-	white-space: pre;
-	word-wrap: normal;
-	overflow: auto;
-}
-
-/* SOURCE: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
-@media print {
-	*,
-	*:before,
-	*:after {
-		background: transparent !important;
-		color: #000 !important; /* Black prints faster: http://www.sanbeiji.com/archives/953 */
-		box-shadow: none !important;
-		text-shadow: none !important;
-		font-family: Garamond, Junicode, serif;
-	}
-
-	body {
-		font-size: 12pt;
-	}
-
-	a,
-	a:visited {
-		text-decoration: underline;
-	}
-
-	a[href]:after {
-		content: " (" attr(href) ")";
-	}
-
-	abbr[title]:after {
-		content: " (" attr(title) ")";
-	}
-
-	/*
-	 * Don't show links that are fragment identifiers,
-	 * or use the `javascript:` pseudo protocol
-	 */
-
-	a[href^="#"]:after,
-	a[href^="data:"]:after,
-	a[href^="javascript:"]:after {
-		content: "";
-	}
-
-	pre,
-	blockquote {
-		border: 1px solid #999;
-		page-break-inside: avoid;
-	}
-
-	/*
-	 * Printing Tables:
-	 * http://css-discuss.incutio.com/wiki/Printing_Tables
-	 */
-
-	thead {
-		display: table-header-group;
-	}
-
-	tr,
-	img {
-		page-break-inside: avoid;
-	}
-
-	img {
-		max-width: 100% !important;
-	}
-
-	p,
-	h2,
-	h3 {
-		orphans: 3;
-		widows: 3;
-	}
-
-	h2,
-	h3 {
-		page-break-after: avoid;
-	}
-
-	.hidden-print {
-		display: none !important;
-	}
-
-	article .entry-title a[href]:after,
-	article .metadata a[href]:after,
-	article .tags a[href]:after {
-		content: "";
-	}
-
-	article .metadata .sourceline {
-		display: none;
-	}
-
-	article .metadata .linkline a[href]:after {
-		content: " (" attr(href) ")";
-	}
-
-	#header {
-		display: none;
-	}
-
-	.postpromonav {
-		padding: 0;
-	}
+@media (max-width: 767px) {
+    .navbar-nav > li > a i div {
+        position: static;
+        text-align: left;
+    }
 }
